SONARPY-3284 Fix 2nd wave of open issues (#471)
GitOrigin-RevId: 06c1f95702246610d1f6a5d416a5ee4347ca17f7